Wed Aug 17 15:53:33 CEST 2005 (acab)
------------------------------------
  * libclamav/spin.c: fixed bitmap shifting

Tue Aug 16 12:50:30 CEST 2005 (acab)
------------------------------------
  * libclamav: fixed compiler warnings (thx njh)

Mon Aug 15 22:13:11 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Improved signal handling

Mon Aug 15 18:17:29 CEST 2005 (acab)
------------------------------------
  * libclamav: fsg handler improved

Sat Aug 13 19:08:55 CEST 2005 (acab)
-----------------------------------
  * libclamav/spin.c: improvements and fixups

Fri Aug 12 18:17:59 CEST 2005 (tk)
----------------------------------
  * libclamav/filetypes.c: update zip-sfx type signature (Sven Strickroth)

Thu Aug 11 21:15:26 BST 2005 (njh)
----------------------------------
  * clamav-milter:	--timeout wasn't always being honoured

Fri Aug  5 02:48:47 CEST 2005 (tk)
----------------------------------
  * libclamav: merge PESpin unpacker from aCaB

Wed Aug  3 16:28:20 CEST 2005 (tk)
----------------------------------
  * libclamav/others.c: cli_rmdirs: ENOTEMPTY is EBADF on AIX (thanks to
			Tayfun Asker <tasker*metu.edu.tr>)

Wed Aug  3 16:16:59 CEST 2005 (tk)
----------------------------------
  * freshclam: --on-outdated-execute: do not trigger on f-level warning (which
	       in most cases means software was linked against improper
	       version of libclamav); add support for %v (new version string)
	       in command string

Wed Aug  3 09:56:33 BST 2005 (trog)
-----------------------------------
  * libclamav/chmunpack.c: Fix possible memory leak (TK)

  * libclamav/vba_extract.c: Fix zero allocation warning.

Wed Aug  3 04:57:36 CEST 2005 (tk)
----------------------------------
  * freshclam: add new option --on-update-execute (OnUpdateExecute). Requested
	       by Per Jessen

Sat Jul 30 11:09:47 BST 2005 (njh)
----------------------------------
  * libclamav/pdf.c:	Improved parsing

Tue Jul 26 03:31:12 CEST 2005 (tk)